# procedural-terrain

./: .gitignore  Cargo.toml  LICENSE.md  README.md  blog.md  build.rs  debug.txt  load.py  notes.md  test.py
assets/: tree.mtl
docs/: blog.md
scripts/: point_scaling.py  test.py
src/: app.rs  assets.rs  camera.rs  heightmap.rs  lib.rs  light.vert  light.wgsl  main.rs  main_bevy.rs  mesh.rs  model.rs  noise.rs  resources.rs  shader.frag  shader.vert  shader.wgsl  terrain.rs  texture.rs
src/heightmaps/: dla.rs  lib.rs  mod.rs
src/render/: camera.rs  instance.rs  mod.rs  model.rs  pipeline.rs  scene.rs  state.rs  texture.rs  transform.rs  validation.rs
src/shaders/: shader.wgsl  terrain.wgsl
src/sim/: materials.rs  mod.rs  terrain.rs
src/sim/generation/: lib.rs  mod.rs  perlin.rs
