[package]
name = "procedural-terrain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.3.0"
image = "0.24.8"
nalgebra = "0.32.3"
noise = "0.8.2"
rand = "0.8.5"
rayon = "1.7.0"
anyhow = "1.0"
bytemuck = { version = "1.24", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.10"
pollster = "0.3"
log = "0.4"
tobj = { version = "3.2", default-features = false, features = ["async"]}
wgpu = { version = "28.0.0"}
winit = { version = "0.30"}
instant = "0.1"
indicatif = "0.17.5"
egui = "0.33.0"
egui-wgpu = { version = "0.33.0", features = ["winit"] }
egui-winit = "0.33.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3