[package]
name = "procedural-terrain"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
wgpu = "28"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"
glam = "0.28"
log = "0.4"
env_logger = "0.11"
egui = "0.28"
egui-wgpu = "0.28"
egui-winit = "0.28"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3