[package]
name = "procedural-terrain"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[build-dependencies]
fs_extra = "1"
anyhow = "1"

[dependencies]
wgpu = "28"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"
glam = "0.28"
cgmath = "0.18" # need to remove
log = "0.4"
env_logger = "0.11"
egui = "0.28"
egui-wgpu = "0.28"
egui-winit = "0.28"
anyhow = "1"
image = "0.24"
rand = "0.8"
indicatif = "0.17"
tobj = "3.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3